
set(GAMEPLAY_SRC
    src/AbsoluteLayout.cpp
    src/AbsoluteLayout.h
    src/AIAgent.cpp
    src/AIAgent.h
    src/AIController.cpp
    src/AIController.h
    src/AIMessage.cpp
    src/AIMessage.h
    src/AIState.cpp
    src/AIState.h
    src/AIStateMachine.cpp
    src/AIStateMachine.h
    src/Animation.cpp
    src/Animation.h
    src/AnimationClip.cpp
    src/AnimationClip.h
    src/AnimationController.cpp
    src/AnimationController.h
    src/AnimationTarget.cpp
    src/AnimationTarget.h
    src/AnimationValue.cpp
    src/AnimationValue.h
    src/AudioBuffer.cpp
    src/AudioBuffer.h
    src/AudioController.cpp
    src/AudioController.h
    src/AudioListener.cpp
    src/AudioListener.h
    src/AudioSource.cpp
    src/AudioSource.h
    src/Base.h
    src/BoundingBox.cpp
    src/BoundingBox.h
    src/BoundingBox.inl
    src/BoundingSphere.cpp
    src/BoundingSphere.h
    src/BoundingSphere.inl
    src/Bundle.cpp
    src/Bundle.h
    src/Button.cpp
    src/Button.h
    src/Camera.cpp
    src/Camera.h
    src/CheckBox.cpp
    src/CheckBox.h
    src/Container.cpp
    src/Container.h
    src/Control.cpp
    src/Control.h
    src/ControlFactory.h
    src/ControlFactory.cpp
    src/Curve.cpp
    src/Curve.h
    src/DebugNew.cpp
    src/DebugNew.h
    src/DepthStencilTarget.cpp
    src/DepthStencilTarget.h
    src/Drawable.cpp
    src/Drawable.h
    src/Effect.cpp
    src/Effect.h
    src/FileSystem.cpp
    src/FileSystem.h
    src/FlowLayout.cpp
    src/FlowLayout.h
    src/Font.cpp
    src/Font.h
    src/Form.cpp
    src/Form.h
    src/FrameBuffer.cpp
    src/FrameBuffer.h
    src/Frustum.cpp
    src/Frustum.h
    src/Game.cpp
    src/Game.h
    src/Game.inl
    src/Gamepad.cpp
    src/Gamepad.h
    src/main-android.cpp
    src/main-linux.cpp
    src/main-windows.cpp
    src/Gesture.h
    src/HeightField.cpp
    src/HeightField.h
    src/Image.cpp
    src/Image.h
    src/Image.inl
    src/ImageControl.cpp
    src/ImageControl.h
    src/Joint.cpp
    src/Joint.h
    src/JoystickControl.cpp
    src/JoystickControl.h
    src/Label.cpp
    src/Label.h
    src/Layout.cpp
    src/Layout.h
    src/Light.cpp
    src/Light.h
    src/Logger.cpp
    src/Logger.h
    src/Material.cpp
    src/Material.h
    src/MaterialParameter.cpp
    src/MaterialParameter.h
    src/MathUtil.cpp
    src/MathUtil.h
    src/MathUtil.inl
    src/MathUtilNeon.inl
    src/Matrix.cpp
    src/Matrix.h
    src/Matrix.inl
    src/Mesh.cpp
    src/Mesh.h
    src/MeshBatch.cpp
    src/MeshBatch.h
    src/MeshBatch.inl
    src/MeshPart.cpp
    src/MeshPart.h
    src/MeshSkin.cpp
    src/MeshSkin.h
    src/Model.cpp
    src/Model.h
    src/Node.cpp
    src/Node.h
    src/ParticleEmitter.cpp
    src/ParticleEmitter.h
    src/Pass.cpp
    src/Pass.h
    src/PhysicsCharacter.cpp
    src/PhysicsCharacter.h
    src/PhysicsCollisionObject.cpp
    src/PhysicsCollisionObject.h
    src/PhysicsCollisionShape.cpp
    src/PhysicsCollisionShape.h
    src/PhysicsConstraint.cpp
    src/PhysicsConstraint.h
    src/PhysicsController.cpp
    src/PhysicsController.h
    src/PhysicsFixedConstraint.cpp
    src/PhysicsFixedConstraint.h
    src/PhysicsGenericConstraint.cpp
    src/PhysicsGenericConstraint.h
    src/PhysicsGhostObject.cpp
    src/PhysicsGhostObject.h
    src/PhysicsHingeConstraint.cpp
    src/PhysicsHingeConstraint.h
    src/PhysicsRigidBody.cpp
    src/PhysicsRigidBody.h
    src/PhysicsSocketConstraint.cpp
    src/PhysicsSocketConstraint.h
    src/PhysicsSpringConstraint.cpp
    src/PhysicsSpringConstraint.h
    src/PhysicsVehicle.cpp
    src/PhysicsVehicle.h
    src/PhysicsVehicleWheel.cpp
    src/PhysicsVehicle.h
    src/Plane.cpp
    src/Plane.h
    src/Plane.inl
    src/Platform.h
    src/Platform.cpp
    src/PlatformAndroid.cpp
    src/PlatformLinux.cpp
    src/PlatformWindows.cpp
    src/Properties.cpp
    src/Properties.h
    src/Quaternion.cpp
    src/Quaternion.h
    src/Quaternion.inl
    src/RadioButton.cpp
    src/RadioButton.h
    src/Ray.cpp
    src/Ray.h
    src/Ray.inl
    src/Rectangle.cpp
    src/Rectangle.h
    src/Ref.cpp
    src/Ref.h
    src/RenderState.cpp
    src/RenderState.h
    src/RenderTarget.cpp
    src/RenderTarget.h
    src/Scene.cpp
    src/Scene.h
    src/SceneLoader.cpp
    src/SceneLoader.h
    src/ScreenDisplayer.cpp
    src/ScreenDisplayer.h
    src/Script.cpp
    src/Script.h
    src/ScriptController.cpp
    src/ScriptController.h
    src/ScriptController.inl
    src/ScriptTarget.cpp
    src/ScriptTarget.h
    src/Serializable.h
    src/Serializer.cpp
    src/Serializer.h
    src/SerializerBinary.cpp
    src/SerializerBinary.h
    src/SerializerJson.cpp
    src/SerializerJson.h
    src/Slider.cpp
    src/Slider.h
    src/Sprite.cpp
    src/Sprite.h
    src/SpriteBatch.cpp
    src/SpriteBatch.h
    src/Technique.cpp
    src/Technique.h
    src/Terrain.cpp
    src/Terrain.h
    src/TerrainPatch.cpp
    src/TerrainPatch.h
    src/Text.cpp
    src/Text.h
    src/TextBox.cpp
    src/TextBox.h
    src/Texture.cpp
    src/Texture.h
    src/Theme.cpp
    src/Theme.h
    src/ThemeStyle.cpp
    src/ThemeStyle.h
    src/TileSet.cpp
    src/TileSet.h
    src/Transform.cpp
    src/Transform.h
    src/Vector2.cpp
    src/Vector2.h
    src/Vector2.inl
    src/Vector3.cpp
    src/Vector3.h
    src/Vector3.inl
    src/Vector4.cpp
    src/Vector4.h
    src/Vector4.inl
    src/VertexAttributeBinding.cpp
    src/VertexAttributeBinding.h
    src/VertexFormat.cpp
    src/VertexFormat.h
    src/VerticalLayout.cpp
    src/VerticalLayout.h
)

set(GAMEPLAY_RES
    res/logo_black.png
    res/logo_powered_black.png
    res/logo_powered_white.png
    res/logo_white.png
)

set(GAMEPLAY_RES_SHADERS
    res/shaders/colored.frag
    res/shaders/colored.vert
    res/shaders/font.frag
    res/shaders/font.vert
    res/shaders/form.frag
    res/shaders/form.vert
    res/shaders/lighting.frag
    res/shaders/lighting.vert
    res/shaders/skinning.vert
    res/shaders/skinning-none.vert
    res/shaders/sprite.frag
    res/shaders/sprite.vert
    res/shaders/terrain.frag
    res/shaders/terrain.vert
    res/shaders/textured.frag
    res/shaders/textured.vert
)

set(GAMEPLAY_RES_SHADERS
    res/ui/arial.gpb
    res/ui/default.png
    res/ui/default.theme
)

include_directories(
    src
    ../external-deps/include
)


add_definitions(-std=c++11)

if(CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_definitions(-lstdc++)
endif()
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
    include_directories(${GTK2_INCLUDE_DIRS})
    add_definitions(${GTK2_CFLAGS_OTHER})
    add_definitions(-D__linux__)
    add_definitions(-lstdc++)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set(CMAKE_CXX_FLAGS -Wno-warnings)
endif()

add_library(gameplay STATIC
    ${GAMEPLAY_SRC}
)

set_target_properties(gameplay PROPERTIES
    OUTPUT_NAME "gameplay"
    CLEAN_DIRECT_OUTPUT 1
    VERSION ${GAMEPLAY_VERSION}
)

source_group(res FILES ${GAMEPLAY_RES} ${GAMEPLAY_RES} ${GAMEPLAY_RES_SHADERS} ${GAMEPLAY_RES_UI})
source_group(src FILES ${GAMEPLAY_SRC})



